add more to instructions

--- a/templates/index.html
+++ b/templates/index.html
@@ -382,7 +382,8 @@
     <body>
         <div>
             <h1 id="title">{{ title }}</h1>
-            <a href="/instructions.html">Instructions</a>
+            <a href="./instructions.html">Instructions</a>
+            <a href="./">Reset</a>
         </div>
         <div id="play-container" class="play-container">
             <div id="card-container" class="card-container"></div>
